--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,11 @@
   font-family: "Space Grotesk";
   src: url("/SpaceGrotesk-VariableFont_wght.ttf");
 }
+
+#root {
+  @apply bg-darkest-grey;
+}
+
 .heading-xl {
   @apply text-7xl;
   @apply tracking-tight;
