add more vertical spacing

--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,13 @@
   src: url("/SpaceGrotesk-VariableFont_wght.ttf");
 }
 
+html {
+  @apply overflow-x-hidden;
+}
+
 #root {
   @apply bg-darkest-grey;
+  @apply w-screen;
 }
 
 .heading-xl {
